<resources>
    <string name="app_name">环境监测</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
    <string name="hint_account">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="dorm_monitor">环境监控</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_boy_drom">男生宿舍</string>
    <string name="fragment_girl_drom">女生宿舍</string>
    <string name="admin_drom_delect_title">请选择要查看的宿舍</string>
    <string name="test_account_parent">家长测试账号：cdcwzk</string>
    <string name="test_account_admin">管理员测试账号：admin</string>


    <string name="login_forget">忘记密码？</string>
</resources>
