<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:title=" ">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18.0sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="normal"
            />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:text="@string/test_account_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/test_account_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/etAccount"
            android:drawableLeft="@drawable/ic_account"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_account"
            android:text="cdcwzk"/>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/etPassword"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="123456"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>