<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:mwhVelocity="1"
        app:mwhProgress="1"
        app:mwhGradientAngle="45"
        app:mwhWaveHeight="50dp"
        app:mwhColorAlpha="0.45"
        app:mwhStartColor="@color/colorPrimary"
        app:mwhCloseColor="@color/colorPrimaryLight"
        app:mwhWaves="MultiWave">

        <!--android:tag="-->
        <!--70,25,1.4,1.4,-26-->
        <!--100,5,1.4,1.2,15-->
        <!--420,0,1.15,1,-10-->
        <!--520,10,1.7,1.5,20-->
        <!--220,0,1,1,-15-->
        <!--"-->
        <!--app:mwhStartColor="@color/colorPrimary"-->
        <!--app:mwhCloseColor="#31AFFE"-->
        <!--app:mwhWaves="MultiWave"-->
        <!--app:mwhColorAlpha="0.45"-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="70dp"-->
            <!--app:mwOffsetY="25dp"-->
            <!--app:mwScaleX="1.4"-->
            <!--app:mwScaleY="1.4"-->
            <!--app:mwVelocity="-26dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="100dp"-->
            <!--app:mwOffsetY="5dp"-->
            <!--app:mwScaleX="1.4"-->
            <!--app:mwScaleY="1.2"-->
            <!--app:mwVelocity="-15dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="420dp"-->
            <!--app:mwOffsetY="0dp"-->
            <!--app:mwScaleX="1.15"-->
            <!--app:mwScaleY="1"-->
            <!--app:mwVelocity="-10dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="520dp"-->
            <!--app:mwOffsetY="10dp"-->
            <!--app:mwScaleX="1.7"-->
            <!--app:mwScaleY="1.5"-->
            <!--app:mwVelocity="20dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="220dp"-->
            <!--app:mwOffsetY="0dp"-->
            <!--app:mwScaleX="1"-->
            <!--app:mwScaleY="1"-->
            <!--app:mwVelocity="-15dp"/>-->
    </com.scwang.wave.MultiWaveHeader>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="-85dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/waveHeader"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_login_logo"/>


    <EditText
        android:id="@+id/etAccount"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/waveHeader"
        android:drawableLeft="@mipmap/ic_login_account"
        android:drawableStart="@mipmap/ic_login_account"
        android:drawablePadding="15dp"
        android:padding="3dp"
        android:inputType="textPersonName"
        android:background="@android:color/transparent"
        android:hint="@string/hint_account"
        android:textColor="@color/colorTextContent"
        android:textSize="@dimen/textsize_content"
        android:text="cdcwzk"
        tools:text="13828416860" />

    <View style="@style/AppTheme.Division"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/etAccount"/>

    <EditText
        android:text="123456"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/etAccount"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@mipmap/ic_login_password"
        android:drawableStart="@mipmap/ic_login_password"
        android:drawablePadding="15dp"
        android:padding="3dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorTextContent"
        android:textSize="@dimen/textsize_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <View style="@style/AppTheme.Division"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/etPassword"/>

    <ImageView style="@style/AppTheme.Label.Assistant"
        android:id="@+id/delete"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/etAccount"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_login_delete"
        android:contentDescription="@string/app_name"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <TextView style="@style/AppTheme.Label.Assistant"
        android:id="@+id/forget"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/etPassword"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/login_forget"/>

    <TextView style="@style/AppTheme.Button.Primary"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/etPassword"
        android:padding="10dp"
        android:textSize="@dimen/textsize_titlesmall"
        android:text="@string/login"
        android:background="@drawable/primary_button"
        tools:enabled="true"/>

</RelativeLayout>
